kubernetes/kustomize/nscale/extend/network/erp-cmis-connector.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: erp-cmis-connector
spec:
  podSelector:
    matchLabels:
      app: erp-cmis-connector
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: application-layer
    ports:
      - protocol: TCP
        port: application
