kubernetes/kustomize/nscale/extend/network/ilm-connector.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ilm-connector
spec:
  podSelector:
    matchLabels:
      app: ilm-connector
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: application-layer
    ports:
      - protocol: TCP
        port: 8080
