kubernetes/kustomize/nscale/extend/network/monitoring-console.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: monitoring-console
spec:
  podSelector:
    matchLabels:
      app: monitoring-console
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    # access from monitoring-console-setup container in the same namespace
    - podSelector:
        matchLabels:
          app: monitoring-console-setup
    ports:
      - protocol: TCP
        port: monitoring
  - from:
    # access from administrator in the same namespace
    - podSelector:
        matchLabels:
          app: administrator
    ports:
      - protocol: TCP
        port: monitoring
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/part-of: nscale
