kubernetes/kustomize/nscale/extend/network/pipeliner.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pipeliner
spec:
  podSelector:
    matchLabels:
      app: pipeliner
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    # access from administrator in the same namespace
    - podSelector:
        matchLabels:
          app: monitoring-console
    ports:
      - protocol: TCP
        port: pipeliner
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: application-layer
    ports:
      - protocol: TCP
        port: application
      - protocol: TCP
        port: 7800
      - protocol: TCP
        port: 32000
        endPort: 65535
  - to:
    - podSelector:
        matchLabels:
          app: storage-layer
    ports:
      - protocol: TCP
        port: storage
  - to:
    - podSelector:
        matchLabels:
          app: postgresql
    ports:
      - protocol: TCP
        port: postgresql
  # TODO: access api-server
  # > kubectl get endpoints --namespace default kubernetes
  # see https://pauldally.medium.com/accessing-kubernetes-api-server-when-there-is-an-egress-networkpolicy-af4435e005f9
  - to:
    - ipBlock:
        # allow complete internet for now
        cidr: 0.0.0.0/0
