kubernetes/kustomize/nscale/extend/network/process-automation-modeler.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: process-automation-modeler
spec:
  podSelector:
    matchLabels:
      app: process-automation-modeler
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: application-layer
    ports:
      - protocol: TCP
        port: 8080
