kubernetes/kustomize/nscale/extend/network/rendition-server.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rendition-server
spec:
  podSelector:
    matchLabels:
      app: rendition-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: application-layer
    ports:
      - protocol: TCP
        port: rendition
  - from:
    # access from administrator in the same namespace
    - podSelector:
        matchLabels:
          app: administrator
    ports:
      - protocol: TCP
        port: rendition
  - from:
    # access from monitoring namespace
    - podSelector:
        matchLabels:
          app: monitoring-console
    ports:
      - protocol: TCP
        port: rendition
